test_suite/ui/with_fields.stderr
error: Bitflag variants cannot contain additional data
 --> $DIR/with_fields.rs:4:8
  |
4 |     Bar(u32),
  |        ^^^^^
